# trae-mem

./: .gitignore  README.md  README_EN.md  pyproject.toml
blog/: 01-storage-and-retrieval.md  02-session-lifecycle-hooks.md  03-compression-and-summarization.md  04-mcp-service-interface.md  mcp-architecture-deep-dive.md  trae-mem-tech-deep-dive.md
blog/assets/: trae-mem-architecture.drawio
docs/: trae_integration.md
scripts/: demo.sh  install_mcp.py
tests/: test_basic.py
trae_hooks/: PostToolUse.sh  PreToolUse.sh  SessionEnd.sh  SessionStart.sh  Stop.sh  UserPromptSubmit.sh
trae_mem/: api.py  cli.py  compress.py  db.py  hooks_bridge.py  mcp_server.py
