[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trae-mem"
version = "0.1.0"
description = "Persistent memory compression system for Trae (SQLite + layered summaries + progressive disclosure search)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.scripts]
trae-mem = "trae_mem.cli:main"

[tool.setuptools.packages.find]
include = ["trae_mem*"]

